--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ html, body {
 }
 
 .container {
-    background-color: #66BCC0;
+    background-color: #E8E8E4;
     justify-content: center;
     
 }
 .icon{
-color: white;
+color: #B5838D;
 
 }
