--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ html, body {
 }
 
 .container {
-    background-color: #E8E8E4;
+    background-color: #FFD7BA;
     justify-content: center;
     
 }
 .icon{
-color: #B5838D;
+color: #006466;
 
 }
