--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ html, body {
 }
 
 .container {
-    background-color: #D8E2DC;
+    background-color: #FFDDD2;
     justify-content: center;
     
 }
 .icon{
-color: #E8A598;
+color: #E29578;
 
 }
